# AbstractStrategyPlayer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.md  system_requirements.md
SOARAgent/: classDiagram.plantuml
catan/board/tests/: test_hex.py
catan/game/: actions.py  game_state.py
catan/game/tests/: test_actions.py  test_game_state.py
